--- a/client/src/styles/MainPage.module.scss
+++ b/client/src/styles/MainPage.module.scss
@@ -1,1 +1,14 @@
 @import "./variables.scss";
+
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 15px;
+}
+
+.posts {
+  display: flex;
+  width: 500px;
+  flex-flow: row wrap;
+}
