--- a/client/src/styles/NavBar.module.scss
+++ b/client/src/styles/NavBar.module.scss
@@ -21,7 +21,7 @@
 
   ul {
     display: grid;
-    grid-template-columns: repeat(5, 40px);
+    grid-template-columns: repeat(5, minmax(40px, 60px));
     column-gap: 15px;
     height: 100%;
     list-style-type: none;
@@ -29,14 +29,13 @@
     margin-right: 80px;
 
     li {
-      width: 100%;
-      height: 100%;
       background-color: inherit;
       font-weight: bold;
       display: flex;
       align-items: center;
       white-space: nowrap;
       text-transform: capitalize;
+      justify-self: center;
       cursor: pointer;
       .icon {
         font-size: 22px;
