--- a/client/src/styles/SearchRes.module.scss
+++ b/client/src/styles/SearchRes.module.scss
@@ -13,9 +13,11 @@
     display: flex;
     align-items: center;
     .name {
-      font-size: 14px;
-      font-weight: 600;
-      padding-left: 5px;
+      a {
+        font-size: 14px;
+        font-weight: 600;
+        padding-left: 5px;
+      }
     }
 
     button {
